feat: work on signlar update for authenticated users
