# applications/RPGTableHelper.WebApi/Dtos/RpgEntities/CampagneJoinRequestCreateDto.cs
@@ -1,0 +1,13 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace RPGTableHelper.WebApi.Dtos.RpgEntities
+{
+    public class CampagneJoinRequestCreateDto
+    {
+        [Required]
+        public string CampagneId { get; set; } = default!;
+
+        [Required]
+        public string PlayerCharacterId { get; set; } = default!;
+    }
+}
